
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-pl ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-2119] Fixed bug in IE where onunload was firing regardless, preventing moving off page seamlessly
- [#MODX-2112] Fixed bug where admin password reset was not working
- [#MODX-2111] Fixed bug where language settings were not set after running setup in another language
- [#MODX-2110] Fixed bug where resource fields were not being updated on update, causing publishedon errors
- Adjusted version for pl development

MODx Revolution 2.0.0-rc-3 (LastChangedRevision: 7083, LastChangedDate: 2010-07-07 12:20:55 -0500 (Wed, 07 Jul 2010))
====================================
- Updated German translation
- Fixed bug with new installs and base template name
- Fixed UI issue with Namespace path being unwantingly translated
- Upped timeout on setup settings cache to 10 minutes; was far too short
- [#MODX-2040] Fixed bug with setProperties and merge argument
- Slight tweaks to phpthumb default config
- Added sanity check when using multiple TV render directories
- [#MODX-2100] Fixed content type creation for binary type bug, bug in build with regards to content types
- Added flag to setup to fix proceeding error after install
- Fixed setup to return setup process to very beginning when settings timeout, avoiding various errors about classes not being found
- Added modx-tv-checkbox class to resource TV checkboxes for easier DOM manip
- Added showCheckbox setting for resource TVs display to allow for extensibility and TV targeting
- Added phpThumb specific settings
- Added OnResourceTVFormRender event for affecting TV displays on resources
- [#MODX-2104] Auto-detect correct value and set use_multibyte on new installs